--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <header class="d-flex align-items-center">
         <div class="container">
             <div class="row align-items-cente ">
-                <div class="col-md-3 col-8 text-left">
+                <div class="col-md-3 col-4 text-left">
                     <!--logo start-->
                     <div class="logo">
                         <a href="#"><img src="img/logo.png" class="img-fluid"></a>
                     </div>
                     <!--logo end-->
                 </div>
-                <div class="col-md-9 col-4">
+                <div class="col-md-9 col-8 d-flex justify-content-end align-items-center">
                     <!--menu start-->
                     <div class="d-flex align-items-center justify-content-end">
                         <ul id="menu">
@@ -80,11 +80,11 @@
                             </li>
                         </ul>
                         <div class="login">
-                            <div class="d-flex align-items-center ml_65">
-                                <div class="login_user d-flex align-items-center">
-                                    <i class="far fa-user"></i>
-                                    <a href="#" class="nav-link">login</a>
-                                </div>
+                            <div class="login_user d-flex align-items-center">
+                                <i class="far fa-user"></i>
+                                <a href="#" class="nav-link">login</a>
+                            </div>
+                            <div class="sign_btn">
                                 <a href="#" class="nav-link btn_a"> sign up </a>
                             </div>
                         </div>
@@ -96,31 +96,6 @@
                         <span class="line-center"></span>
                         <span class="line-bottom"></span>
                     </div>
-                    <!-- Ofcanvas-menu -->
-                    <div class="ofcavas-menu">
-                        <!--menu start-->
-                        <ul>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Team</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">News</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Sponsors</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#" class="nav-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- Ofcanvas-menu END-->
                 </div>
             </div>
         </div>
@@ -137,7 +112,7 @@
                     <img src="img/Group-122.png">
                 </div>
                 <div class="row ">
-                    <div class="col-md-5">
+                    <div class="col-xl-5 col-lg-6 col-md-12">
                         <span class="shape_line"></span>
                         <h2>
                             Exchange Cryptocurrency
@@ -153,7 +128,7 @@
                             <a href="#" class="btn_a">Read more</a>
                         </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-xl-7 col-lg-6 col-md-12">
                         <img src="img/Group-1910.png" class="img-fluid">
                     </div>
                 </div>
@@ -237,8 +212,8 @@
         <img class="Connecting_area_top_shape" src="img/up.svg">
         <img class="Connecting_area_buttom_shape" src="img/down.svg">
         <div class="container">
-            <div class="row align-item-center justify-content-center">
-                <div class="col-md-6">
+            <div class="Connecting_box row align-item-center justify-content-center">
+                <div class="col-lg-6 col-md-12">
                     <div class="Connecting_area_left">
                         <span class="shape_line"></span>
                         <h2>
@@ -256,7 +231,7 @@
                         <a href="#" class="btn_a"> read more</a>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6 col-md-12">
                     <div class="Connecting_area_right">
                         <div class="Connecting_bg_shape1 rellax " data-rellax-speed="1">
                             <img src="img/Group-1769.png" class="w-100">
@@ -283,8 +258,8 @@
                     but the majority have suffered alteration in some look even slightly believable.
                 </p>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
+            <div class="row justify-content-center">
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="service_box">
                         <img src="img/altcoins.png" class="img-fluid">
                         <h5>Margin Trading</h5>
@@ -294,7 +269,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="service_box">
                         <img src="img/bitcoin-calculator.png" class="img-fluid">
                         <h5>Currency converter</h5>
@@ -304,7 +279,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="service_box">
                         <img src="img/mining-hardware.png" class="img-fluid">
                         <h5>Advice For Mining</h5>
@@ -314,12 +289,12 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="service_box">
                         <img src="img/bitcoin-encryption.png" class="img-fluid">
                         <h5>Best security</h5>
                         <p>
-                            There are many variations of available, buts the majority have suffered alteration in some
+                            There are many variations of available, but the majority have suffered alteration in some
                             form, by injected humour .
                         </p>
                     </div>
@@ -510,19 +485,21 @@
     <div class="recent_articles">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-xl-3 col-lg-12">
                     <div class="recent_articles_left">
                         <h3>Recent Articles</h3>
                         <p class="mt_30 mb_30">
                             There are many variations of passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some look
                         </p>
-                        <a href="#" class="btn_a">
-                            read more
-                        </a>
+                        <div class="mb_60">
+                            <a href="#" class="btn_a">
+                                read more
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-xl-9 col-lg-12">
                     <div class="recent_articles_right">
                         <div class="owl-carousel owl-theme">
                             <div class="item">
@@ -710,7 +687,7 @@
                             have suffered
                             alteration</p>
                     </div>
-                    <div class="footer_top_fight">
+                    <div class="footer_top_right">
                         <a href="#" class="btn_a">
                             get Start Now
                         </a>
@@ -719,7 +696,7 @@
             </div>
             <div class="footer_bottom">
                 <div class="row">
-                    <div class="col-md-3 mb_40">
+                    <div class="col-lg-3 col-md-6 mb_40">
                         <div class="footer_logo">
                             <img src="img/logo.png" class="w-100">
                         </div>
@@ -742,7 +719,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-3 mb_40">
+                    <div class="col-lg-3 col-md-6 mb_40">
                         <div class="contact_info mt_20">
                             <h5>
                                 Contact Info
@@ -761,7 +738,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 mb_40">
+                    <div class="col-lg-3 col-md-6 mb_40">
                         <div class="Quick_Links mt_20">
                             <h5>
                                 Quick Links
@@ -772,7 +749,7 @@
                             <a href="#" class="p1">Policy & Privacy</a>
                         </div>
                     </div>
-                    <div class="col-md-3 mb_40">
+                    <div class="col-lg-3 col-md-6 mb_40">
                         <div class="Newsletter mt_20">
                             <h5>
                                 Newsletter
