--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="col-md-3 col-4 text-left">
                     <!--logo start-->
                     <div class="logo">
-                        <a href="#"><img src="img/logo.png" class="img-fluid"></a>
+                        <a href="index.html"><img src="img/logo.png" class="img-fluid"></a>
                     </div>
                     <!--logo end-->
                 </div>
@@ -64,28 +64,28 @@
                     <div class="d-flex align-items-center justify-content-end">
                         <ul id="menu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Home</a>
+                                <a href="index.html" class="nav-link">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Services</a>
+                                <a href="service.html" class="nav-link">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Blog</a>
+                                <a href="blog.html" class="nav-link">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">Contact us</a>
+                                <a href="contact.html" class="nav-link">Contact us</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link ">about us</a>
+                                <a href="about.html" class="nav-link ">about us</a>
                             </li>
                         </ul>
                         <div class="login">
                             <div class="login_user d-flex align-items-center">
                                 <i class="far fa-user"></i>
-                                <a href="#" class="nav-link">login</a>
+                                <a href="login.html" class="nav-link">login</a>
                             </div>
                             <div class="sign_btn">
-                                <a href="#" class="nav-link btn_a"> sign up </a>
+                                <a href="singup.html" class="nav-link btn_a"> sign up </a>
                             </div>
                         </div>
                     </div>
